tests/fixtures/errors/duplicate_let.gcl
// error: duplicate let binding in a block
node x: Dimensionless = {
    let a = 1.0;
    let a = 2.0;
    a
};
